# mcp-todo-app

./: README.md  chat.py  client.py  config.py  configuration.py  dummy_client.py  main.py  mcp_client.py  mcp_tool.py  ollama.py  pyproject.toml  server.py  server_config.json  stream_printer.py  terminal_chatbot.py  workflow.py
